--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
         "serve": "vite preview"
     },
     "devDependencies": {
-        "vite": "^4.4.11",
-        "@vitejs/plugin-react": "4.2.0"
+        "@vitejs/plugin-react": "4.2.0",
+        "vite": "^4.4.11"
     },
     "dependencies": {
-        "firebase": "^9.17.1",
+        "firebase": "^9.23.0",
         "mobx": "^6.8.0",
         "mobx-react-lite": "^3.4.2",
         "react": "^18.0.0",
