--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "firebase": "^9.23.0",
+        "fullcalendar": "^6.1.11",
         "mobx": "^6.8.0",
         "mobx-react-lite": "^3.4.2",
         "react": "^18.0.0",
