--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "mobx": "^6.8.0",
         "mobx-react-lite": "^3.4.2",
         "react": "^18.0.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.8.1",
         "reactjs-popup": "^2.0.6"
