--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
         "start": "vite",
         "dev": "vite",
         "build": "vite build",
-        "serve": "vite preview"
+        "serve": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "git push origin main"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "4.2.0",
+        "gh-pages": "^6.1.1",
         "vite": "^4.4.11"
     },
     "dependencies": {
