--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
         "start": "vite",
         "dev": "vite",
         "build": "vite build",
-        "serve": "vite preview",
-        "predeploy": "npm run build",
-        "deploy": "git push origin main"
+        "serve": "vite preview"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "4.2.0",
-        "gh-pages": "^6.1.1",
         "vite": "^4.4.11"
     },
     "dependencies": {
